# forward

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  shell.nix
.github/workflows/: ci.yml
apps/: CMakeLists.txt  app.cpp  forward.cpp  inspect.cpp
benchmarks/: CMakeLists.txt
benchmarks/llama/: CMakeLists.txt  bm_rope.cpp
benchmarks/tensor/: CMakeLists.txt
benchmarks/tensor/cpu/: bm_ops.cpp
benchmarks/tensor/cuda/: bm_ops.cpp
cmake/: CUDAConfig.cmake
docs/: CMakeLists.txt  CUDA_PROFILING.md  LSP_DEBUG.md  mainpage.md
include/forward/: lib.hpp  loader.hpp  model.hpp  sampler.hpp  tensor.hpp  tokenizer.hpp
include/forward/nn/: embedding.hpp
include/llama/: config.hpp  embedding.hpp  grouped_query_attention.hpp  kv_cache.hpp  layer.hpp  mlp.hpp  model.hpp  rms_norm.hpp  rope.hpp  transformer_layer.hpp
include/nn/: act.hpp  embedding.hpp  linear.hpp  mlp.hpp  rms_norm.hpp  softmax.hpp
include/tensor/: device.hpp  device_type.hpp  dtype.hpp  loader.hpp  ops.hpp  storage.hpp  tensor.hpp
include/tensor/cpu/: cpu.hpp
include/util/: nvtx.hpp
scripts/: format.sh  lint.sh  ncu.sh  nsys.sh
src/: CMakeLists.txt  lib.cpp  loader.cpp  model.cpp  tokenizer.cpp
src/forward/: CMakeLists.txt  loader.cpp  sampler.cpp  tokenizer.cpp
src/llama/: CMakeLists.txt  config.cpp  embedding.cpp  grouped_query_attention.cpp  kv_cache.cpp  layer.cpp  mlp.cpp  model.cpp  rms_norm.cpp  rope.cpp  rope.cu
src/llama/kernels/: grouped_query_attention.cu  rope.cu
src/nn/: CMakeLists.txt  embedding.cpp
src/nn/cpu/: CMakeLists.txt  act.cpp  embedding.cpp  linear.cpp  mlp.cpp  rms_norm.cpp  softmax.cpp
src/nn/cuda/: CMakeLists.txt  act.cu  embedding.cu  linear.cu  rms_norm.cu  softmax.cu
src/nn/cuda/kernels/: act.cu  act.cuh  embedding.cu  embedding.cuh  rms_norm.cu  rms_norm.cuh  utils.cuh
src/tensor/: CMakeLists.txt
src/tensor/common/: safetensors_impl.cpp  utils.h
src/tensor/cpu/: CMakeLists.txt  loader.cpp  ops.cpp
src/tensor/cuda/: CMakeLists.txt  cuda_compat.h  loader.cu  ops.cu  storage.cu  utils.cuh
src/tensor/cuda/kernels/: add.cu  add.cuh  arange.cu  arange.cuh  argmax.cu  argmax.cuh  broadcast.cuh  cat.cu  cat.cuh  copy.cu  copy.cuh  div.cu  div.cuh  fill.cu  fill.cuh  map.cu  map.cuh  masked_fill.cu  masked_fill.cuh  matmul.cu  matmul.cuh  max.cu  max.cuh  mul.cu  mul.cuh  slice.cu  slice.cuh  sub.cu  sub.cuh  sum.cu  sum.cuh  tril.cu  tril.cuh  utils.cuh  zip.cu  zip.cuh
tests/: CMakeLists.txt  test_loader.cpp  test_model.cpp  test_tensor.cpp  test_tokenizer.cpp  testlib.cpp
tests/common/: test_config.h.in  test_utils.hpp
tests/forward/: CMakeLists.txt  test_loader.cpp  test_tokenizer.cpp
tests/llama/: CMakeLists.txt  test_embedding.cpp  test_grouped_query_attention.cpp  test_layer.cpp  test_mlp.cpp  test_model.cpp  test_rms_norm.cpp  test_rope.cpp
tests/nn/: CMakeLists.txt  test_embedding.cpp
tests/nn/cpu/: CMakeLists.txt  test_act.cpp  test_embedding.cpp  test_rms_norm.cpp  test_softmax.cpp
tests/nn/cuda/: CMakeLists.txt  test_act.cpp  test_embedding.cpp  test_rms_norm.cpp  test_softmax.cpp
tests/reference/: main.py  pyproject.toml
tests/tensor/: CMakeLists.txt  test_tensor.cpp
tests/tensor/cpu/: CMakeLists.txt  test_loader.cpp  test_ops.cpp  test_tensor.cpp
tests/tensor/cuda/: CMakeLists.txt  test_loader.cpp  test_ops.cpp  test_tensor.cpp
